# scinit

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  ChildProcessException.cpp  ChildProcessException.h  Config.cpp  Config.h  ConfigParseException.cpp  ConfigParseException.h  Dockerfile  README.md  log.h  main.cpp
.circleci/: check-format.sh  config.yml  smoke-test.sh
src/: CMakeLists.txt  ChildProcess.cpp  ChildProcess.h  ChildProcessException.cpp  ChildProcessException.h  ChildProcessInterface.h  Config.cpp  Config.h  ConfigInterface.h  ConfigParseException.cpp  ConfigParseException.h  ProcessHandler.cpp  ProcessHandler.h  ProcessHandlerException.cpp  ProcessHandlerException.h  ProcessHandlerInterface.h  log.h  main.cpp
test/: CMakeLists.txt  MockChildProcess.h  MockEventHandlers.h  test_config_parser.cpp  test_integration.cpp  test_issue_reproducers.cpp  test_process_handler.cpp  test_process_lifecycle.cpp
test/integration_test/: MockChildProcess.h  MockProcessHandler.h
test/process_handler_test/: MockChildProcess.h
test/process_lifecycle_test/: MockChildProcess.h
test/test_configs/: broken-yaml-config.yml  config-with-deps.yml  config-with-named-user.yml  invalid-program-config.yml  issue-8-simplified.yml  issue-9-crashing-exit.yml  smoke-test-config.yml  test-env-complex-it.yml  test-env-complex.yml  test-env.yml  test-pty.yml  test-stdouterr.yml
test/test_configs/conf.d/: 01-config.yml  02-config.yml
test/test_programs/: envcompare.cpp  envdetect.cpp  permdetect.cpp  ptydetect.cpp  stdouterr.cpp  zombie.cpp
test_programs/: zombie.cpp
